trying to reflect img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Значения метеорологических явлений</title>
   </head>
 
@@ -37,9 +37,9 @@
               <h4 class="title__h31 title__h31_off">Ветер</h4>
             </div>
             <div class="picture">
-              <img src="/img/1_on.png" alt="" class="picture__weather1" />
+              <img src="./img/1_on.png" alt="" class="picture__weather1" />
               <img
-                src="/img/1_off.png"
+                src="./img/1_off.png"
                 alt=""
                 class="picture__weather1"
                 style="display: none"
@@ -66,9 +66,9 @@
               <h4 class="title__h32 title__h32_off">Дождь</h4>
             </div>
             <div class="picture">
-              <img src="/img/2_on.png" alt="" class="picture__weather2" />
+              <img src="./img/2_on.png" alt="" class="picture__weather2" />
               <img
-                src="/img/2_off.png"
+                src="./img/2_off.png"
                 alt=""
                 class="picture__weather2"
                 style="display: none"
@@ -95,9 +95,9 @@
               <h4 class="title__h33 title__h33_off">Снег</h4>
             </div>
             <div class="picture">
-              <img src="/img/3_on.png" alt="" class="picture__weather3" />
+              <img src="./img/3_on.png" alt="" class="picture__weather3" />
               <img
-                src="/img/3_off.png"
+                src="./img/3_off.png"
                 alt=""
                 class="picture__weather3"
                 style="display: none"
@@ -124,9 +124,9 @@
               <h4 class="title__h34 title__h34_off">Метель</h4>
             </div>
             <div class="picture">
-              <img src="/img/4_on.png" alt="" class="picture__weather4" />
+              <img src="./img/4_on.png" alt="" class="picture__weather4" />
               <img
-                src="/img/4_off.png"
+                src="./img/4_off.png"
                 alt=""
                 class="picture__weather4"
                 style="display: none"
@@ -153,9 +153,9 @@
               <h4 class="title__h35 title__h35_off">Град</h4>
             </div>
             <div class="picture">
-              <img src="/img/5_on.png" alt="" class="picture__weather5" />
+              <img src="./img/5_on.png" alt="" class="picture__weather5" />
               <img
-                src="/img/5_off.png"
+                src="./img/5_off.png"
                 alt=""
                 class="picture__weather5"
                 style="display: none"
@@ -182,9 +182,9 @@
               <h4 class="title__h36 title__h36_off">Гололед</h4>
             </div>
             <div class="picture">
-              <img src="/img/6_on.png" alt="" class="picture__weather6" />
+              <img src="./img/6_on.png" alt="" class="picture__weather6" />
               <img
-                src="/img/6_off.png"
+                src="./img/6_off.png"
                 alt=""
                 class="picture__weather6"
                 style="display: none"
@@ -211,9 +211,9 @@
               <h4 class="title__h37 title__h37_off">Мороз</h4>
             </div>
             <div class="picture">
-              <img src="/img/7_on.png" alt="" class="picture__weather7" />
+              <img src="./img/7_on.png" alt="" class="picture__weather7" />
               <img
-                src="/img/7_off.png"
+                src="./img/7_off.png"
                 alt=""
                 class="picture__weather7"
                 style="display: none"
@@ -240,5 +240,5 @@
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 </html>
